begin update pour "calcul haute performance dans le navigateur"

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-      --&gt; Lundi 30 Septembre à 19h &lt;--
+      --&gt; Mardi 12 Novembre à 19h &lt;--
       <br><a href="https://www.eventbrite.fr/event/8364836451?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=8364836451" alt="Eventbrite - LyonJS # 16 : Tour d’horizon de Node.js" /></a>
     </h1>
   </header>
   <article id="next">
-    <h2>Tour d’horizon de Node.js</h2>
+    <h2>Calcul haute performance dans le navigateur</h2>
     <div class="row-fluid">
         <div class="span4">
             <img src="https://si0.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo"/>
@@ -52,14 +52,9 @@
             <a href="http://tddsworld.com/" class="centered">http://tddsworld.com/</a>
         </div>
       <div class="span8 lead description">
-          <p><i>Le LyonJS est heureux d'accueillir pour cette rentrée Christophe Porteneuve, un des acteurs français important du monde JavaScript. Nous esperons que vous serez nombreux à venir le voir ce qui nous motivera à inviter d'autres personnalités.</i></p>
-          <h3>Tour d’horizon de Node.js</h3>
-          <p>Node.js est l’une des technologies les plus en vue de ces dernières années, des services web à la robotique; désormais bien industrialisé et doté d’un écosystème et d’une communauté très vifs, Node a remis sur le devant de la scène un modèle de programmation non bloquant / asynchrone et, surtout, des techniques de code élégantes pour réaliser celui-ci.</p>
-          <p>Dans cette présentation, Christophe Porteneuve va tenter de brosser un tableau de Node.js aussi concret que possible, en posant rapidement quelques notions fondamentales (Node, modules, npm, asynchrone…) et en déroulant le développement d’une application web qui mettra conjointement en œuvre quelques-uns des usages les plus célèbres, d’Express à Docco en passant par de l’OAuth 2, du Redis, des Web Sockets, Brunch, Mocha et Uglify.</p>
-          <p>Et peut-être même, qui sait, un petit bonus qui sortira du strict domaine dématérialisé du web pour se manifester physiquement.</p>
-          <p><strong>Prix :</strong> gratuit</p>
-          <p><strong>Durée :</strong> ~1h30</p>
-          <p><strong>After :</strong> Apéro !</p>
+     <p>Cette présentation commencera par quelques notions de calcul haute performance dans un programme.</p>
+    <p>Ceci de la théorie puis un aperçu d'API pour améliorer l’efficacité des programmes.</p>
+    <p>Ensuite après un bref rappel sur le fonctionnement du JavaScript et du JIT associé, nous aborderons les problèmes rencontrés en terme d'efficacité de calcul dans le navigateur ainsi que les solutions envisageables et envisagées.</p>
       </div>
     </article>
     <article id="where">
@@ -72,6 +67,10 @@
     <article id="previous">
       <h2>Les sessions précédentes</h2>
       <ul>
+        <li>
+          <h3>Lundi 30 septembre 2013</h3>
+          <a href="#">Tour d'horizon de Node.JS par Christophe Porteneuve</a>.
+        </li>
         <li>
           <h3>4 juin 2013</h3>
           <a href="http://slid.es/fabiennicollet/lyonjswindows8">Développer des apps Windows 8 en JavaScript</a> par Fabien Nicollet (<a href="https://twitter.com/fnicollet">@fnicollet</a>, <a href="https://github.com/fnicollet/">github</a>).
