--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <h2>Calcul haute performance dans le navigateur</h2>
     <div class="row-fluid">
         <div class="span4">
-            <img src="https://si0.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo"/>
+           <!-- <img src="https://si0.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo"/>
             <a href="https://twitter.com/porteneuve" class="centered">Twitter</a>
             <a href="https://github.com/tdd" class="centered">GitHub</a>
-            <a href="http://tddsworld.com/" class="centered">http://tddsworld.com/</a>
+            <a href="http://tddsworld.com/" class="centered">http://tddsworld.com/</a>-->
         </div>
       <div class="span8 lead description">
      <p>Cette présentation commencera par quelques notions de calcul haute performance dans un programme.</p>
