--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
       --&gt; Mardi 12 Novembre à 19h &lt;--
-      <br><a href="https://www.eventbrite.fr/event/8364836451?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=8364836451" alt="Eventbrite - LyonJS # 16 : Tour d’horizon de Node.js" /></a>
+      <br>
+      <a href="https://www.eventbrite.fr/event/9209432661?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=9209432661" alt="Eventbrite - LyonJS # 17 : Calcul haute performance dans le navigateur" /></a>
     </h1>
   </header>
   <article id="next">
