Fix speaker pictures

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/2702418800/b480948627e1e777d9a25f99cb51c24c.png" alt="CozyCloud" class="logo">
+            <img src="https://pbs.twimg.com/profile_images/378800000546458145/483fc743399268c855d9a0d3abf62e0b.png" alt="CozyCloud" class="logo">
           </div>
           <div class="span8">
             <h3>CozyCloud</h3>
@@ -162,7 +162,7 @@
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/1843833164/tc-photo_bigger.jpg">
+            <img src="https://pbs.twimg.com/profile_images/1843833164/tc-photo.jpg">
           </div>
           <div class="span8">
             <h3>Thierry Chatel <small>tchatel</small></h3>
@@ -172,7 +172,7 @@
         </div>
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg">
+            <img src="https://pbs.twimg.com/profile_images/1285309666/6200.jpg">
           </div>
           <div class="span8">
             <h3>Florent Pellet<small></small></h3>
@@ -195,7 +195,7 @@
         </div>
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/1725850023/creative5_a2_reasonably_small.png" alt="Web Creative5" class="avatar size128">
+            <img src="https://pbs.twimg.com/profile_images/378800000543173557/3101b6cbe3de138834e5f76003c5ef5d.png" alt="Web Creative5" class="avatar size128">
           </div>
           <div class="span8">
             <h3>Samuel Ronce <small>Web Creative5</small></h3>
@@ -208,7 +208,7 @@
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/821941422/swiip_reasonably_small.jpg" alt="Matthieu Lux" class="avatar size128">
+            <img src="https://pbs.twimg.com/profile_images/821941422/swiip.jpg" alt="Matthieu Lux" class="avatar size128">
           </div>
           <div class="span8">
             <h3>Matthieu Lux <small>Swiip</small></h3>
@@ -231,7 +231,7 @@
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/1250714234/IMG_0044_reasonably_small.JPG" alt="Mickael Daniel" class="avatar size128">
+            <img src="https://pbs.twimg.com/profile_images/1250714234/IMG_0044.JPG" alt="Mickael Daniel" class="avatar size128">
           </div>
           <div class="span8">
             <h3>Mikael Daniel <small>mklabs</small></h3>
@@ -266,7 +266,7 @@
         </div>
         <div class="span6 row-fluid">
           <div class="span4">
-            <img src="https://twimg0-a.akamaihd.net/profile_images/1802255209/fnicollet_reasonably_small.jpg" alt="Fabien Nicollet" class="avatar size128">
+            <img src="https://pbs.twimg.com/profile_images/1802255209/fnicollet.jpg" alt="Fabien Nicollet" class="avatar size128">
           </div>
           <div class="span8">
             <h3>Fabien Nicollet <small>fnicollet</small></h3>
