Fix description wording

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <a href="http://tddsworld.com/" class="centered">http://tddsworld.com/</a>-->
         </div>
       <div class="span8 lead description">
-     <p>Cette présentation commencera par quelques notions de calcul haute performance dans un programme.</p>
-    <p>Ceci de la théorie puis un aperçu d'API pour améliorer l’efficacité des programmes.</p>
-    <p>Ensuite après un bref rappel sur le fonctionnement du JavaScript et du JIT associé, nous aborderons les problèmes rencontrés en terme d'efficacité de calcul dans le navigateur ainsi que les solutions envisageables et envisagées.</p>
+     <p>Cette présentation débutera par quelques notions de calcul haute performance dans un programme.</p>
+     <p>De la théorie pour commencer, puis un aperçu d'API pour améliorer l’efficacité des programmes.</p>
+     <p>Ensuite, après un bref rappel sur le fonctionnement du JavaScript et du JIT associé, nous aborderons les problèmes rencontrés en terme d'efficacité de calcul dans le navigateur ainsi que les solutions envisageables et envisagées.</p>
       </div>
     </article>
     <article id="where">
