Add video and update speakers

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <ul>
         <li>
           <h3>Lundi 30 septembre 2013</h3>
-          <a href="#">Tour d'horizon de Node.JS par Christophe Porteneuve</a>.
+          <a href="https://github.com/tdd/blend-demo">Tour d'horizon de Node.JS</a> par Christophe Porteneuve (<a href="https://twitter.com/porteneuve">@porteneuve</a>, <a href="https://github.com/tdd/">github</a>) - <a href="http://www.youtube.com/watch?v=JuOtgnBVTt0">Vidéo</a>.
         </li>
         <li>
           <h3>4 juin 2013</h3>
@@ -134,7 +134,21 @@
       </ul>
     </article>
     <article id="speakers">
+      <div class="row-fluid">
       <h2>Les speakers</h2>
+      <div class="row-fluid">
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://pbs.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo">
+          </div>
+          <div class="span8">
+            <h3>Christophe Porteneuve</h3>
+            <p><a href="https://github.com/tdd/">Github</a></p>
+            <p><a href="https://twitter.com/porteneuve/">Twitter</a></p>
+          </div>
+        </div>
+        <div class="span6 row-fluid">&nbsp;</div>
+      </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
@@ -157,7 +171,6 @@
             <p><a href="https://twitter.com/mycozycloud/">Twitter</a></p>
           </div>
         </div>
-        <div class="span6 row-fluid">&nbsp;</div>
       </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
