eventbrite + incrust youtube

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS">
       <br />--&gt; Mardi 10 Décembre à 19h &lt;--
       <br>
-      <!-- <a href="https://www.eventbrite.fr/event/9209432661?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=9209432661" alt="Eventbrite - LyonJS # 18 : Techniques de Ninjas pour les grosses applications Angular.js & Un conte autobiographique sur ma rencontre avec asmjs" /></a> -->
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-18-techniques-de-ninja-pour-angularjs-decodage-jpeg-en-asmjs-9209410595?ref=ebtn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=9209410595" alt="Eventbrite - LyonJS # 18 : Techniques de ninja pour Angular.js / Décodage JPEG en asm.js" /></a>
     </h1>
   </header>
   <article id="next">
@@ -98,10 +98,14 @@
       <li>
         <h3>Mardi 12 novembre 2013</h3>
         <a href="http://lyonjs.org/lyonjs-17/#/">Calcul haute performance dans le navigateur</a> par Fabien Cellier (<a href="https://twitter.com/fcellier">@fcellier</a>) - <a href="http://www.youtube.com/watch?v=_KH8z9VlDR8">Vidéo</a>.
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/_KH8z9VlDR8" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>Lundi 30 septembre 2013</h3>
         <a href="https://github.com/tdd/blend-demo">Tour d'horizon de Node.JS</a> par Christophe Porteneuve (<a href="https://twitter.com/porteneuve">@porteneuve</a>, <a href="https://github.com/tdd/">github</a>) - <a href="http://www.youtube.com/watch?v=JuOtgnBVTt0">Vidéo</a>.
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/JuOtgnBVTt0" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>4 juin 2013</h3>
@@ -190,7 +194,16 @@
             </p>
           </div>
         </div>
-        <div class="span6 row-fluid">&nbsp;</div>
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://pbs.twimg.com/profile_images/1338597997/defaultUser_bigger.gif" class="logo">
+          </div>
+          <div class="span8">
+            <h3>Fabien Cellier</h3>
+            <p><a href="https://twitter.com/fcellier">Twitter</a>
+            </p>
+          </div>
+        </div>
       </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
