--- a/index.html
+++ b/index.html
@@ -49,36 +49,22 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS">
-      <br />--&gt; Mardi 10 Décembre à 19h &lt;--
+      <br />--&gt; Mardi 14 Janvier à 19h &lt;--
       <br>
-      <a href="https://www.eventbrite.fr/e/billets-lyonjs-18-techniques-de-ninja-pour-angularjs-decodage-jpeg-en-asmjs-9209410595?ref=ebtn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=9209410595" alt="Eventbrite - LyonJS # 18 : Techniques de ninja pour Angular.js / Décodage JPEG en asm.js" /></a>
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-19-retour-dexperience-sur-js1k-10135482501?ref=ebtn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=10135482501" alt="Eventbrite - LyonJS # 19 : Retour d&#39;expérience sur JS1K" /></a>
     </h1>
   </header>
   <article id="next">
-    <h2>Techniques de ninja pour Angular.js / Décodage JPEG en asm.js</h2>
-    <h1 class="centered">2 talks pour le prix d'un cette fois-ci !</h1>
+    <h2>Retour d'expérience sur JS1K</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/378800000532836720/8a622843e2716e4885ddeacf67aa6c8f.jpeg" alt="Guillaume Besson" class="logo" />
-        <a href="https://twitter.com/geekuillaume" class="centered">Twitter</a>
-        <a href="https://github.com/geekuillaume" class="centered">GitHub</a>
-        <a href="http://besson.co/" class="centered">http://besson.co/</a>
+        <img src="https://pbs.twimg.com/profile_images/420001570982346752/4KLqnqIy.jpeg" alt="Benjamin (Bill) Planche" class="logo" />
+        <a href="https://twitter.com/b_aldream" class="centered">Twitter</a>
+        <a href="https://github.com/Aldream" class="centered">GitHub</a>
+        <a href="http://aldream.net/" class="centered">http://aldream.net/</a>
       </div>
       <div class="span8 lead description">
-        <h3>Techniques de Ninjas pour les grosses applications Angular.js</h3>
-        <p>Chez Chaze, nous sommes toujours à la recherche des dernières techniques de développeurs Ninjas et au bout d'un an de travail intensif, nous avons testé pleins de choses. Dans cette présentation, je vous ferais part des trucs et astuces que j'ai trouvé après avoir développé une grosse application avec Angular.js. Au programme, utilisation des directives dans des cas réels, structure du code, Grunt from scratch et pleins d'autres petits trucs.</p>
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/1777939560/gravatar.png" alt="Francois Poizat" class="logo" />
-        <a href="https://twitter.com/FranzP" class="centered">Twitter</a>
-        <a href="https://github.com/FranzPoize" class="centered">GitHub</a>
-        <a href="http://franzp.fr/" class="centered">http://franzp.fr/</a>
-      </div>
-      <div class="span8 lead description">
-        <h3>Un conte autobiographique sur ma rencontre avec asmjs</h3>
-        <p>L'histoire d'un développeur qui a voulu décompresser du jpeg a la mano dans le browser : c'est stupide, mais possible !</p>
+        <p>JS1K est un concours demandant à ses participants de réaliser des démos en javascript ne dépassant pas 1k.<br>Benjamin a tenté l'aventure et nous fera part de son expérience, les outils de compression qu'il a utilisé, de son workflow...</p>
       </div>
     </div>
   </article>
@@ -95,6 +81,14 @@
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
+      <li>
+        <h3>Mardi 10 décembre 2013</h3>
+        Techniques de ninja pour Angular.js par Guillaume Besson (<a href="https://github.com/geekuillaume">@geekuillaume</a>)<br>
+        Décodage JPEG en asm.js par François Poizat (<a href="https://github.com/FranzP">@FranzP</a>)<br>
+        <a href="http://www.youtube.com/watch?v=AFurUgL5hhg">Vidéo</a>.
+        <br>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/AFurUgL5hhg" frameborder="0" allowfullscreen></iframe>
+      </li>
       <li>
         <h3>Mardi 12 novembre 2013</h3>
         <a href="http://lyonjs.org/lyonjs-17/#/">Calcul haute performance dans le navigateur</a> par Fabien Cellier (<a href="https://twitter.com/fcellier">@fcellier</a>) - <a href="http://www.youtube.com/watch?v=_KH8z9VlDR8">Vidéo</a>.
@@ -181,6 +175,32 @@
   <article id="speakers">
     <div class="row-fluid">
       <h2>Les speakers</h2>
+      <div class="row-fluid">
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://pbs.twimg.com/profile_images/378800000532836720/8a622843e2716e4885ddeacf67aa6c8f.jpeg" alt="Guillaume Besson" class="logo">
+          </div>
+          <div class="span8">
+            <h3>Guillaume Besson</h3>
+            <p><a href="https://github.com/geekuillaume">Github</a>
+            </p>
+            <p><a href="https://twitter.com/geekuillaume">Twitter</a>
+            </p>
+          </div>
+        </div>
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://pbs.twimg.com/profile_images/1777939560/gravatar.png" alt="François Poizat" class="logo">
+          </div>
+          <div class="span8">
+            <h3>François Poizat</h3>
+            <p><a href="https://github.com/FranzPoize">Github</a>
+            </p>
+            <p><a href="https://twitter.com/FranzP">Twitter</a>
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
