Add contact details and previous session links

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="description" content="LyonJS meetup">
   <meta name="viewport" content="width=device-width">
 
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -22,9 +23,9 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar">
-  <a href="https://github.com/LyonJS" class="ribbon">
+  <!-- <a href="https://github.com/LyonJS" class="ribbon">
     <img style="z-index:1050; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
-  </a>
+  </a> -->
   <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
     <ul class="nav">
       <li class="active">
@@ -41,6 +42,11 @@
       <li><a href="#beers">Le LyonJS</a>
       </li>
     </ul>
+    <div class="contacts pull-right">
+      <a href="https://twitter.com/lyonjs" class="fa fa-twitter" target="_blank" title="Twitter"></a>
+      <a href="mailto:lyonjs-internal@googlegroups.com" class="fa fa-envelope-o" title="Mail"></a>
+      <a href="https://groups.google.com/forum/#!forum/lyonjs" class="fa fa-comments" target="_blank" title="Mailing list / Google groups"></a>
+    </div>
   </div>
   <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
@@ -82,9 +88,13 @@
     <h2>Les sessions précédentes</h2>
     <ul>
       <li>
+        <h3>Mardi 14 janvier 2014</h3>
+        <a href="http://aldream.github.io/presentations/2014-01-14%20-%20JS1K%20Experience%20%28LyonJS%20Conference%29/#/">Retour d'expérience sur JS1K</a> par Benjamin Planche (<a href="https://twitter.com/b_aldream">@b_aldream</a>)
+      </li>
+      <li>
         <h3>Mardi 10 décembre 2013</h3>
-        Techniques de ninja pour Angular.js par Guillaume Besson (<a href="https://github.com/geekuillaume">@geekuillaume</a>)<br>
-        Décodage JPEG en asm.js par François Poizat (<a href="https://github.com/FranzP">@FranzP</a>)<br>
+        Techniques de ninja pour Angular.js par Guillaume Besson (<a href="https://twitter.com/geekuillaume">@geekuillaume</a>)<br>
+        Décodage JPEG en asm.js par François Poizat (<a href="https://twitter.com/FranzP">@FranzP</a>)<br>
         <a href="http://www.youtube.com/watch?v=AFurUgL5hhg">Vidéo</a>.
         <br>
         <iframe width="480" height="270" src="//www.youtube.com/embed/AFurUgL5hhg" frameborder="0" allowfullscreen></iframe>
@@ -175,6 +185,21 @@
   <article id="speakers">
     <div class="row-fluid">
       <h2>Les speakers</h2>
+      <div class="row-fluid">
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://pbs.twimg.com/profile_images/420001570982346752/4KLqnqIy.jpeg" alt="Benjamin (Bill) Planche" class="logo">
+          </div>
+          <div class="span8">
+            <h3>Benjamin (Bill) Planche</h3>
+            <p><a href="https://github.com/Aldream">Github</a>
+            </p>
+            <p><a href="https://twitter.com/b_aldream">Twitter</a>
+            </p>
+          </div>
+        </div>
+        <div class="span6 row-fluid">&nbsp;</div>
+      </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
