--- a/index.html
+++ b/index.html
@@ -55,22 +55,23 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS">
-      <br />--&gt; Mardi 14 Janvier à 19h &lt;--
+      <br />--&gt; Mardi 11 Février à 19h15 &lt;--
       <br>
-      <a href="https://www.eventbrite.fr/e/billets-lyonjs-19-retour-dexperience-sur-js1k-10135482501?ref=ebtn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=10135482501" alt="Eventbrite - LyonJS # 19 : Retour d&#39;expérience sur JS1K" /></a>
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>
     </h1>
   </header>
   <article id="next">
-    <h2>Retour d'expérience sur JS1K</h2>
+    <h2>Découverte de MeteorJS</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/420001570982346752/4KLqnqIy.jpeg" alt="Benjamin (Bill) Planche" class="logo" />
-        <a href="https://twitter.com/b_aldream" class="centered">Twitter</a>
-        <a href="https://github.com/Aldream" class="centered">GitHub</a>
-        <a href="http://aldream.net/" class="centered">http://aldream.net/</a>
+        <img src="https://pbs.twimg.com/profile_images/378800000506222495/3bd5c252febbd0e1a99d654358424720_bigger.jpeg" alt="Benjamin RICHARD" class="logo" />
+        <a href="https://twitter.com/rebolon" class="centered">Twitter</a>
+        <a href="https://github.com/Rebolon" class="centered">GitHub</a>
+        <a href="http://about.me/benjamin.richard" class="centered">http://about.me/benjamin.richard</a>
       </div>
       <div class="span8 lead description">
-        <p>JS1K est un concours demandant à ses participants de réaliser des démos en javascript ne dépassant pas 1k.<br>Benjamin a tenté l'aventure et nous fera part de son expérience, les outils de compression qu'il a utilisé, de son workflow...</p>
+        <h3>A better way to build apps.</h3>
+        <p>Meteor is an open-source platform for building top-quality web apps in a fraction of the time, whether you're an expert developer or just getting started.</p>
       </div>
     </div>
   </article>
@@ -89,15 +90,15 @@
     <ul>
       <li>
         <h3>Mardi 14 janvier 2014</h3>
-        <a href="http://aldream.github.io/presentations/2014-01-14%20-%20JS1K%20Experience%20%28LyonJS%20Conference%29/#/">Retour d'expérience sur JS1K</a> par Benjamin Planche (<a href="https://twitter.com/b_aldream">@b_aldream</a>)
+        <a href="http://aldream.github.io/presentations/2014-01-14%20-%20JS1K%20Experience%20%28LyonJS%20Conference%29/#/">Retour d'expérience sur JS1K</a> par Benjamin Planche (<a href="https://twitter.com/b_aldream">@b_aldream</a>, <a href="http://aldream.net/">Site</a>, <a href="http://js1k.com/2013-spring/demo/1507">Démo</a>)
       </li>
       <li>
         <h3>Mardi 10 décembre 2013</h3>
         Techniques de ninja pour Angular.js par Guillaume Besson (<a href="https://twitter.com/geekuillaume">@geekuillaume</a>)<br>
         Décodage JPEG en asm.js par François Poizat (<a href="https://twitter.com/FranzP">@FranzP</a>)<br>
-        <a href="http://www.youtube.com/watch?v=AFurUgL5hhg">Vidéo</a>.
+        <a href="http://www.youtube.com/watch?v=S3JoJPVMkHM">Vidéo</a>.
         <br>
-        <iframe width="480" height="270" src="//www.youtube.com/embed/AFurUgL5hhg" frameborder="0" allowfullscreen></iframe>
+        <iframe width="480" height="270" src="//www.youtube.com/embed/S3JoJPVMkHM" frameborder="0" allowfullscreen></iframe>
       </li>
       <li>
         <h3>Mardi 12 novembre 2013</h3>
