update presentation talk

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
     <h2>Découverte de MeteorJS</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://pbs.twimg.com/profile_images/378800000506222495/3bd5c252febbd0e1a99d654358424720_bigger.jpeg" alt="Benjamin RICHARD" class="logo" />
+        <img src="img/rebolon.jpg" alt="Benjamin RICHARD" class="logo" />
         <a href="https://twitter.com/rebolon" class="centered">Twitter</a>
         <a href="https://github.com/Rebolon" class="centered">GitHub</a>
         <a href="http://about.me/benjamin.richard" class="centered">http://about.me/benjamin.richard</a>
       </div>
       <div class="span8 lead description">
-        <h3>A better way to build apps.</h3>
-        <p>Meteor is an open-source platform for building top-quality web apps in a fraction of the time, whether you're an expert developer or just getting started.</p>
+        <h3>MeteorJS, une autre façon de faire du Node.</h3>
+        <p>Découvrez votre premier prototype d'application temps réel en 15 minutes, puis faites la évoluer en gérant la couche d'authentification, la sécurité, les souscriptions, et plein d'autres choses.</p>
+        <p>Oubliez node, oubliez angular, et découvrez MeteorJS, un framework js client et serveur prêt à l'emploi.</p>
       </div>
     </div>
   </article>
