--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </ul>
     <div class="contacts pull-right">
       <a href="https://twitter.com/lyonjs" class="fa fa-twitter" target="_blank" title="Twitter"></a>
-      <a href="mailto:lyonjs-internal@googlegroups.com" class="fa fa-envelope-o" title="Mail"></a>
+      <a href="mailto:lyonjs@googlegroups.com" class="fa fa-envelope-o" title="Mail"></a>
       <a href="https://groups.google.com/forum/#!forum/lyonjs" class="fa fa-comments" target="_blank" title="Mailing list / Google groups"></a>
     </div>
   </div>
@@ -54,41 +54,57 @@
 
   <header id="event">
     <h1>
-      <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS">
-      <br />--&gt; Mardi 11 Février à 19h15 &lt;--
+      <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"> --&gt; <img src="img/logo-y-like-gotha-transparent.png" alt="LyonJS" style="height: 240px;"> ?
+      <br><a href="mailto:lyonjs@googlegroups.com" title="Mail"><small>Changement de logo, qu'en pensez-vous ?</small></a>
       <br>
-      <a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>
+      <br>--&gt; Jeudi 3 Avril à 19h15 &lt;--
+      <br>
+      <br><a href="#where">Attention, changement de lieu!
+      <br>Toujours à l'Epitech mais un peu plus loin dans la rue Paul Bert.</a>
+      <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>Découverte de MeteorJS</h2>
+    <h2>AngularJS from scratch</h2>
     <div class="row-fluid">
-      <div class="span4">
-        <img src="img/rebolon.jpg" alt="Benjamin RICHARD" class="logo" />
-        <a href="https://twitter.com/rebolon" class="centered">Twitter</a>
-        <a href="https://github.com/Rebolon" class="centered">GitHub</a>
-        <a href="http://about.me/benjamin.richard" class="centered">http://about.me/benjamin.richard</a>
+      <div class="span2">
+        <span class="centered">Olivier Huber</span>
+        <img src="https://pbs.twimg.com/profile_images/420649738854084608/ilj2U_BH.jpeg" alt="Olivier HUBER" class="logo" />
+        <a href="https://twitter.com/olivierhuber" class="centered">Twitter</a>
+        <a href="https://github.com/olivierhuber" class="centered">GitHub</a>
+      </div>
+      <div class="span2">
+        <span class="centered">Matthieu Lux</span>
+        <img src="https://pbs.twimg.com/profile_images/821941422/swiip.jpg" alt="Matthieu LUX" class="logo" />
+        <a href="https://twitter.com/Swiip" class="centered">Twitter</a>
+        <a href="https://github.com/Swiip" class="centered">GitHub</a>
       </div>
       <div class="span8 lead description">
-        <h3>MeteorJS, une autre façon de faire du Node.</h3>
-        <p>Découvrez votre premier prototype d'application temps réel en 15 minutes, puis faites la évoluer en gérant la couche d'authentification, la sécurité, les souscriptions, et plein d'autres choses.</p>
-        <p>Oubliez node, oubliez angular, et découvrez MeteorJS, un framework js client et serveur prêt à l'emploi.</p>
+        <h3>Nous vous proposons de réécrire AngularJS de zero avec nous.<br>Rien de tel pour démystifier le framework !</h3>
+        <p>On a tous vu une présentation d’AngularJS montrant la magie des bindings et des directives. Oui, mais comment ça marche ? Rien de mieux pour le comprendre que de le construire étape par étape. C’est finalement avec assez peu de code et un code très intéressant à détailler que les principaux mécanismes d’AngularJS apparaissent. Avant la fin de la séance, binding, directives, templates, tout fonctionne.</p>
+        <p>Depuis plus d’un an, dans la communauté AngularJS en France, les présentations sur le framework ont toutes été données.</p>
+        <p>Mais comment démystifier le côté magique d’AngularJS. Comment aborder avec des auditeurs qui ne sont pas forcément spécialistes du JavaScript, les mécanismes interne du framework ? Nous avons mis au point une base de code qui permet, en partant de zero, de reproduire les mécanismes principales des scopes d’Angular, du Dirty Checking, du binding et enfin de la compilation du DOM afin d’interpréter les directives présentes dans le code HTML.</p>
       </div>
     </div>
   </article>
   <article id="where">
     <h2>Le lieu : Epitech</h2>
-    <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
-
-    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe>
+    <a href="https://www.google.fr/maps/place/156+Rue+Paul+Bert/@45.7569796,4.8568653,17z/data=!4m2!3m1!1s0x47f4ea644203652f:0xd3c65f499a2fb92f">Epitech Lyon, 156 Rue Paul Bert, 69003 Lyon</a>
+    <br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2783.7089971948003!2d4.8568653!3d45.7569796!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea644203652f%3A0xd3c65f499a2fb92f!2s156+Rue+Paul+Bert!5e0!3m2!1sfr!2sfr!4v1395673105501" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe>
     <br />
     <small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a>
-    </small>
+    </small>-->
     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=2934105339601756812&amp;q=E.P.I.T.E.C.H.+(Ecole+pour+l'Informatique+et+les+nouvelles+Technologies)&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.754828,4.860764&amp;spn=0.017966,0.025749&amp;z=14&amp;output=embed"></iframe>-->
   </article>
   <article id="previous">
     <h2>Les sessions précédentes</h2>
     <ul>
+      <li>
+        <h3>Mardi 11 février 2014</h3>
+        <a href="http://slid.es/rebolon/meteorjs-first-walk">Découverte de MeteoJS</a> par Benjamin Richard (<a href="https://twitter.com/rebolon">@rebolon</a>, <a href="http://about.me/benjamin.richard">Site</a>, <a href="http://t.co/ASbxJSb5Pg">Sources</a>)
+      </li>
       <li>
         <h3>Mardi 14 janvier 2014</h3>
         <a href="http://aldream.github.io/presentations/2014-01-14%20-%20JS1K%20Experience%20%28LyonJS%20Conference%29/#/">Retour d'expérience sur JS1K</a> par Benjamin Planche (<a href="https://twitter.com/b_aldream">@b_aldream</a>, <a href="http://aldream.net/">Site</a>, <a href="http://js1k.com/2013-spring/demo/1507">Démo</a>)
@@ -200,7 +216,18 @@
             </p>
           </div>
         </div>
-        <div class="span6 row-fluid">&nbsp;</div>
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="img/rebolon.jpg" alt="Benjamin Richard" class="logo">
+          </div>
+          <div class="span8">
+            <h3>Benjamin Richard</h3>
+            <p><a href="https://github.com/rebolon">Github</a>
+            </p>
+            <p><a href="https://twitter.com/rebolon">Twitter</a>
+            </p>
+          </div>
+        </div>
       </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
