--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <br><a href="#where">Attention, changement de lieu!
       <br>Toujours à l'Epitech mais un peu plus loin dans la rue Paul Bert.</a>
       <!--<a href="https://www.eventbrite.fr/e/billets-lyonjs-20-meteor-10135478489?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=10135478489" alt="Eventbrite - LyonJS #20 - Meteor" /></a>-->
+      <a href="https://www.eventbrite.fr/e/billets-lyonjs-21-angularjs-from-scratch-11083885199?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=11083885199" alt="Eventbrite - LyonJS #21 - AngularJS from scratch" /></a>
     </h1>
   </header>
   <article id="next">
